[metadata]
name = weimoo
version = 0.0.1
license = MIT
description = Small package containing implementations of implementations and interfaces for weight-based multi-objective optimization approaches
long_description = file: README.md
author = Nico Palm
author_email = nicolaipalm@googlemail.com
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning


[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy~=1.21.2
    scipy~=1.7.1
    pymoo~=0.5.0
    plotly~=5.1.0
    gpytorch~=1.5.1
    torch~=1.9.0
    matplotlib~=3.4.2
    tqdm~=4.62.2

[options.packages.find]
where=src